--- a/pom.xml
+++ b/pom.xml
@@ -103,10 +103,20 @@
                         <artifactId>jbcrypt</artifactId>
                         <version>0.4</version>
                 </dependency>
-		<!--   JUnit   -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
+                <dependency>
+                        <groupId>org.glassfish.jersey.core</groupId>
+                        <artifactId>jersey-client</artifactId>
+                        <version>3.1.8</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.glassfish.jersey.media</groupId>
+                        <artifactId>jersey-media-json-jackson</artifactId>
+                        <version>3.1.8</version>
+                </dependency>
+                <!--   JUnit   -->
+                <dependency>
+                        <groupId>junit</groupId>
+                        <artifactId>junit</artifactId>
 			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
