Add Jakarta servlet API dependency

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
                 </dependency>
                 <!-- Java EE APIs (para Tomcat 9 / Servlet 4.0) -->
                 <dependency>
+                        <groupId>jakarta.servlet</groupId>
+                        <artifactId>jakarta.servlet-api</artifactId>
+                        <version>5.0.0</version>
+                        <scope>provided</scope>
+                </dependency>
+                <dependency>
                         <groupId>javax.servlet</groupId>
                         <artifactId>javax.servlet-api</artifactId>
                         <version>4.0.1</version>
